<resources>
    <string name="app_name">LawTest</string>

    <!-- Log In -->
    <string name="login_title">Log in</string>
    <string name="login_log_in">enter account</string>
    <string name="new_acc">create new account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">remember me</string>
    <string name="create_acc">Create account</string>
    <string name="new_user_name_error">Invalid name</string>
    <string name="new_user_email_error">Invalid email</string>
    <string name="new_user_password_error">Password must be longer then 5 characters</string>
    <string name="new_user_empty_error">Must not be empty</string>
    <string name="menu_reg_specialist"> Create new specialist account</string>
    <string name="menu_reg_user">Create new user account</string>
    <string name="login_checking">Checking email and password</string>

    <!-- new user -->
    <string name="hint_fname">Name</string>
    <string name="hint_sname">Second name</string>
    <string name="hint_surname">Surname</string>
    <string name="new_user_title">New user</string>
    <string name="new_user_creating">Creating account</string>

    <!-- user -->
    <string name="menu_home">Home</string>
    <string name="menu_info">App information</string>
    <string name="menu_specialists">Specialists</string>
    <string name="menu_home_title">Your account information</string>
    <string name="menu_info_title">App information</string>
    <string name="menu_specialists_title">List of specialists</string>
    <string name="menu_new_appointment_title">New appointment</string>
    <string name="specialist_comment">Leave review</string>
    <string name="specialist_sign">Appointment</string>
    <string name="specialist_more">More about\nthis specialist</string>
    <string name="show_spec_title">Specialist</string>
    <string name="progress_loading_appointment">Registering appointment</string>
    <string name="appointment_success">Appointment registered</string>
    <string name="appointment_comment_hint">Comment</string>
    <string name="appointment_warning">Please, select needed services</string>
    <string name="appointment_confirm">You attempt to request an appointment with specialist %s %s for services %son %02d:%02d, %02d:%02d:%d</string>
    <string name="appointment_services">Services:</string>
    <string name="appointment_spec_comment">Specialist comment:</string>
    <string name="new_appointment_available_specs_text">Specialists, available for this services:</string>
    <string name="appointment_loading_time">Loading available time</string>
    <string name="select_time">Select time</string>
    <string name="appointment_no_available_time">No available time for this specialist</string>
    <string name="review_review_hint">Review</string>
    <string name="review_must_not_be_empty">Review must not be empty</string>
    <string name="review_registering">Adding review</string>

    <!-- admin -->
    <string name="admin_title">Admin panel</string>
    <string name="admin_specialists_title">specialists</string>
    <string name="admin_posts_title">comments</string>
    <string name="admin_services_title">services</string>
    <string name="show_service_title">Service</string>
    <string name="show_service_name_empty">Service name should not be empty</string>
    <string name="show_service_desc_empty">Service description should not be empty</string>

    <!-- new specialist -->
    <string name="new_specialist_title">New specialist account</string>
    <string name="new_specialist_services">Select services</string>
    <string name="new_specialist_loading_services">loading</string>
    <string name="new_specialist_registering">Registering account on server</string>

    <!-- specialist -->
    <string name="specialist_loading">Loading account data</string>
    <string name="specialist_fetching">Fetching data with server</string>
    <string name="specialist_about">About me</string>
    <string name="specialist_appointments_list_nav">Appointments</string>
    <string name="specialist_user_applies_for">Applies for</string>
    <string name="specialist_appointment_accept">Accept</string>
    <string name="specialist_appointment_decline">Decline</string>
    <string name="appointment_loading">Loading appointment data</string>
    <string name="appointment_desc">%s\nat %02d:%02d, %02d:%02d:%d</string>
    <string name="appointment_comment">User comment</string>
    <string name="appointment_status_accepted">Accepted</string>
    <string name="appointment_status_rejected">Rejected</string>
    <string name="appointment_add_comment">Add comment</string>
    <string name="reviews_title">My reviews</string>

    <!-- new service -->
    <string name="new_service_title">Create new service</string>
    <string name="new_service_hint_name">Service name</string>
    <string name="new_service_hint_desc">Short description</string>
    <string name="new_service_creating">Creating new service</string>
    <string name="new_service_submit">submit</string>

    <!-- edit name dialog -->
    <string name="edit_name_warning">First name and surname mus not be empty</string>
</resources>
