<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/spec_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_spec_home"
            android:icon="@drawable/round_home_black_48"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_spec_appointments"
            android:icon="@drawable/baseline_list_black_24"
            android:title="@string/specialist_appointments_list_nav" />
        <item
            android:id="@+id/nav_spec_reviews"
            android:icon="@drawable/baseline_comment_black_48"
            android:title="@string/reviews_title"
            />
    </group>
    <group
        android:id="@+id/spec_menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_spec_info"
            android:icon="@drawable/round_info_black_48"
            android:title="@string/menu_info" />
    </group>
</menu>