<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@id/nav_home"
        android:name="com.lawtest.ui.user.home.HomeFragment"
        android:label="@string/menu_home_title" />

    <fragment
        android:id="@id/nav_specialists"
        android:name="com.lawtest.ui.user.specialists.SpecialistsFragment"
        android:label="@string/menu_specialists_title"/>

    <fragment
        android:id="@id/nav_info"
        android:name="com.lawtest.ui.user.info.InfoFragment"
        android:label="@string/menu_info_title"/>
</navigation>