<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_new_specialist"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_specialist_title"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="center_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Spinner
            android:id="@+id/newSpecSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow>
            <EditText
                android:layout_weight="1"
                android:id="@+id/newSpecFstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_fname" />
            <EditText
                android:layout_weight="1"
                android:id="@+id/newSpecSndName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_sname" />
        </TableRow>

        <EditText
            android:layout_weight="1"
            android:id="@+id/newSpecSurname"
            android:ems="10"
            android:hint="@string/hint_surname"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_weight="1"
            android:id="@+id/newSpecEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/newSpecPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/newSpecSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/create_acc" />
    </TableLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>