<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewService"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_service_title"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/newServiceName"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="46dp"
        android:hint="@string/new_service_hint_name"
        />
    <EditText
        android:id="@+id/newServiceDescription"
        android:inputType="textMultiLine"
        android:layout_marginTop="16dp"
        android:maxLines="10"
        android:hint="@string/new_service_hint_desc"
        android:layout_marginHorizontal="8dp" />

    <TableRow
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="68dp">
        <Button
            android:id="@+id/newServiceSubmit"
            android:text="@string/new_service_submit"
            android:layout_width="wrap_content"/>
    </TableRow>

</TableLayout>