<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TableRow>
            <ImageView
                android:id="@+id/showSpecAvaView"
                android:layout_height="64dp"
                android:layout_width="64dp"
                android:src="@drawable/ic_user_default" />
            <TableLayout
                android:layout_weight="1000000"
                android:layout_span="2"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/showSpecName"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    style="@style/MainTextStyle"/>
                <TextView
                    android:id="@+id/showSpecEmail"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    style="@style/MainTextStyle"/>
            </TableLayout>
        </TableRow>
        <TableRow
            android:gravity="center">
            <Button
                android:id="@+id/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="?attr/buttonBarButtonStyle"
                android:text="@string/specialist_comment" />

            <Button
                android:id="@+id/btnAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="?attr/buttonBarButtonStyle"
                android:text="@string/specialist_sign" />

            <Button
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="?attr/buttonBarButtonStyle"
                android:text="@string/specialist_more" />
        </TableRow>
    </TableLayout>
    <ListView
        android:id="@+id/showComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>